chore: Ran black format on repo

--- a/language/intro_palm_api.ipynb
+++ b/language/intro_palm_api.ipynb
@@ -317,9 +317,12 @@
     "import seaborn as sns\n",
     "from IPython.display import Markdown, display\n",
     "from sklearn.metrics.pairwise import cosine_similarity\n",
-    "from vertexai.preview.language_models import (ChatModel, InputOutputTextPair,\n",
-    "                                              TextEmbeddingModel,\n",
-    "                                              TextGenerationModel)"
+    "from vertexai.preview.language_models import (\n",
+    "    ChatModel,\n",
+    "    InputOutputTextPair,\n",
+    "    TextEmbeddingModel,\n",
+    "    TextGenerationModel,\n",
+    ")"
    ]
   },
   {
@@ -431,7 +434,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "prompt = \"What are the top 10 trends in the tech industry?\" # try your own prompt\n",
+    "prompt = \"What are the top 10 trends in the tech industry?\"  # try your own prompt\n",
     "\n",
     "response = generation_model.predict(prompt=prompt)\n",
     "\n",
@@ -464,7 +467,7 @@
    },
    "outputs": [],
    "source": [
-    "my_industry = \"tech\" # try changing this to a different industry\n",
+    "my_industry = \"tech\"  # try changing this to a different industry\n",
     "\n",
     "response = generation_model.predict(\n",
     "    prompt=f\"What are the top 10 trends in the {my_industry} industry?\"\n",
