--- a/language/examples/langchain-intro/intro_langchain_palm_api.ipynb
+++ b/language/examples/langchain-intro/intro_langchain_palm_api.ipynb
@@ -747,8 +747,7 @@
    "outputs": [],
    "source": [
     "from langchain.prompts import FewShotPromptTemplate, PromptTemplate\n",
-    "from langchain.prompts.example_selector import \\\n",
-    "    SemanticSimilarityExampleSelector\n",
+    "from langchain.prompts.example_selector import SemanticSimilarityExampleSelector\n",
     "from langchain.vectorstores import FAISS\n",
     "\n",
     "example_prompt = PromptTemplate(\n",
